# fibonacci-cm-elliptic

./: .gitignore  LICENSE  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: Zenodon Release  python-package-conda.yml
paper/: fibonacci_paper_v2.tex  references.bib  supplementary_material.tex
src/fibonacci_cm/: __init__.py  arithmetic.py  figures.py  pipeline.py  reporting.py
tests/: Test properties  test_arithmetic.py  test_pipeline_figures_reporting.py
