[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fibonacci-cm-elliptic"
version = "1.0.0"
description = "Numerical verification of S_p = -a_p(E) for Fibonacci character sums and CM elliptic curves"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Majid Ghandali", email = "majid.ghandali@gmail.com" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "numba>=0.57",
    "sympy>=1.12",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-env",
    "hypothesis>=6.0",
    "flake8",
    "mypy",
    "twine",
    "build",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fibonacci_cm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
env = ["NUMBA_DISABLE_JIT=1"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
